changed some text

--- a/index.html
+++ b/index.html
@@ -2,26 +2,28 @@
 <html lang="en">
 
 <head>
- <meta charset="UTF-8">
- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="stylesheet" href="css/style.css">
- <title>Saif</title>
+    <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Saif</title>
 
 
 </head>
 
 <body>
 
- <div class="text-center">
-  <h1>SAIF PEERZADE</h1>
-  <p>I am buiding somthing amazing here 🤘. <br>
-   Visit again in few days</p>
+    <div class="text-center">
+        <h1>SAIF PEERZADE</h1>
+        <p>I am buiding somthing amazing here 🤘. <br>
+            Visit again in few days</p>
 
-  <h5>Site is under construction 🚧</h5>
+        <h5>Site is under construction 🚧</h5>
+
+        <h5>Domain Managing By Netlify</h5>
 
 
- </div>
+    </div>
 
 
 
