--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <body>
 
     <div class="text-center">
-        <h1>SAIF PEERZADE</h1>
+        <!-- <h1>SAIF PEERZADE</h1> -->
+        <h1>MOHSIN PEERZADE</h1>
         <p>I am buiding somthing amazing here 🤘. <br>
             Visit again in few days</p>
 
