Added the image

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <div class="text-center">
         <!-- <h1>SAIF PEERZADE</h1> -->
+        <img src="WhatsAppImage.jpeg" alt="">
         <h1>MOHSINA PEERZADE</h1>
 
         <p>I am buiding somthing amazing here 🤘. <br>
