Changed pic size

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="text-center">
         <!-- <h1>SAIF PEERZADE</h1> -->
-        <img src="WhatsAppImage.jpeg" alt="">
+        <img height="400" src="WhatsAppImage.jpeg" alt="">
         <br />
         <h1>MOHSINA PEERZADE</h1>
 
